# MLZoomcamp2025_Capstone2

./: Dockerfile  README.md  fly.toml  pyproject.toml  requirements.in
notebooks/: exploration.ipynb
src/: app.py  predict.py  schemas.py  train.py
tests/: test_app.py
